--- a/info-gathering.html
+++ b/info-gathering.html
@@ -36,7 +36,7 @@ $(function () {
         c.beginPath()
         c.arc(x, y, size, 0, Math.PI*2, true)
         c.closePath()
-        c.fillStyle = "black"
+        c.fillStyle = "blue"
         c.fill()
     }, 100)
 })
